2005-02-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha1.tcl:  Re-implemented to support hashing data in chunks
	* sha1.test: Included tests from RFC 2202 for HMAC-SHA1.
	* sha1.man:  This time we have kept the same API but with optional
	extensions to use files/channels and to request the result as
	binary. Now supports token based hashing as in md4, md5 and ripemd.
	Incremented version to 2.0.0

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl:
	* sha1.man:
	* sha1.tcl: Fixed bug #614591. Set version of the package to to
	  1.0.3

2003-03-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sha1.tcl (sha1::sha1): Applied patch #637770 submitted by Donal
	  Fellows to fix problems on Mac OS X machines. This possibly
	  related to 64/32 bit arithmetic. See changes by Don Porter
	  below.

2003-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha1.tcl: Check that we have a _working_ C implementation.

2003-02-06  David N. Welton  <davidw@dedasys.com>

	* sha1.tcl (sha1::time): Use 'lindex' instead of regexp to fetch
	  number from 'time' results.

2002-02-20  Don Porter  <dgp@users.sf.net>

	* sha1.tcl (sha1): Force 32-bit register arithmetic so that
	the right answers are computed even on 64-bit platforms. [446997]

2002-02-20  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* sha1.tcl (initK,sha1): Force 32-bit interpretation of constants